added LANGMUIR 2021 volume and issue

--- a/publications.html
+++ b/publications.html
@@ -66,7 +66,7 @@
 										<a href="https://doi.org/10.1021/acs.langmuir.1c01902" target="_blank" class="removelinkdefault">
 										<strong>Adsorption of single and multiple graphene oxide nanoparticles at a water-vapor interface</strong><br>
 										<u>Simon Gravelle</u> and Lorenzo Botto<br>
-										Langmuir 2021, XXXX, XXX, XXX-XXX</a>  
+										Langmuir, 37, 45, (2021)</a>  
 									</td>
 								</tr>												
 								<tr>
