add sup. mat PRF

--- a/publications.html
+++ b/publications.html
@@ -100,6 +100,9 @@
 										<strong>Violations of Jeffery's theory in the dynamics of nanographene in shear flow</strong><br>
 										<u>Simon Gravelle</u>, Catherine Kamal, Lorenzo Botto<br>
 										Physical Review Fluids, 6 (034303), 2021 </a> 
+										
+										<a href="pdf/Violations_of_Jeffery_s_theory_in_the_dynamics_of_nanographene_in_shear_flow_SI.pdf" target="_blank" class="removelinkdefault"> <br>
+										Supplemental material</a> 
 									</td>
 								</tr>
 								<tr>
