added Github reposiitory

--- a/publications.html
+++ b/publications.html
@@ -23,13 +23,12 @@
 					<a href="https://www.icp.uni-stuttgart.de/" target="_blank">
 					<h5><b>Postdoctoral research assistant</b><br />
 					Institute for computational physics<br />
-					Stuttgart, Germany<h5></a>
+					Stuttgart, Germany<h5></a><br />
 					
-					<br><br>
-					<b>Computer physicist</b> <br />
-					Soft matter physics <br /> 
-					Fluids at interfaces <br /> 
-					Molecular simulations
+					I am a <b>computer physicist</b><br />
+					in soft matter and fluids at interfaces.<br /><br />
+					
+					I mostly use molecular simulations.
 				</div>
 			</header>
 
