--- a/publications.html
+++ b/publications.html
@@ -28,7 +28,7 @@
 					I am a <b>computer physicist</b><br />
 					in soft matter and fluids at interfaces.<br /><br />
 					
-					I mostly use molecular simulations.
+					I am into open science.
 				</div>
 			</header>
 
