added Github reposiitory

--- a/resume.html
+++ b/resume.html
@@ -27,8 +27,8 @@
 					
 					I am a <b>computer physicist</b><br />
 					in soft matter and fluids at interfaces.<br /><br />
-					
-					I am into open science.
+					<a href="resume.html"><b>Full resume</b></a><br />
+					<a href="publications.html"><b>Publication list</b></a><br /><br />
 				</div>
 			</header>
 
