--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 					  <li><a target="_blank" href=" https://github.com/simongravelle/lammps-input-files">LAMMPS input files</a></li>
 					  <li><a target="_blank" href=" https://github.com/simongravelle/gromacs-input-files">GROMACS input files</a></li>
 					  <li><a target="_blank" href="https://github.com/simongravelle/PEGgenerator">PEG generator</a></li>
+					  <li><a target="_blank" href="https://github.com/simongravelle/nmrformd">NMR for Molecular Dynamics</a></li>
 					</ul></ul>  
 					</p>
 				</section>
