--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					</p>
 					<ul>
 						<li><a target="_blank" href="https://github.com/simongravelle">GitHub</a></li>
-						<li><a target="_blank" href="https://darus.uni-stuttgart.de/dataverse/sfb1313_c01_thin-film">DARuS (University of Stuttgart)</a></li>
+						<li><a target="_blank" href="https://darus.uni-stuttgart.de/dataverse/sfb1313_c01_thin-film">DaRUS (University of Stuttgart)</a></li>
 					</ul> 
 				</section>
 				<section id="two">
