--- a/publications.html
+++ b/publications.html
@@ -65,7 +65,7 @@
 										<a href="" target="_blank" class="removelinkdefault">
 										<strong>Viscous peeling of a nanosheet</strong><br>
 										Adyant Agrawal, <u>Simon Gravelle</u>, Catherine Kamal, and Lorenzo Botto<br>
-										Submitted.</a>  
+										Accepted for publication in Soft Matter.</a>  
 									</td>
 								</tr>									
 								
