updated publication list

--- a/publications.html
+++ b/publications.html
@@ -63,18 +63,25 @@
 								<tr>
 									<td>
 										<a href="" target="_blank" class="removelinkdefault">
+										<strong>Transport of thin water films: from thermally activated random walks to hydrodynamics</strong><br>
+										<u>Simon Gravelle</u>, Christian Holm, and Alexander Schlaich<br>
+										Submitted</a>  
+									</td>
+								</tr>	
+								<tr>
+									<td>
+										<a href="https://pubs.rsc.org/en/content/articlelanding/2022/sm/d1sm01743h" target="_blank" class="removelinkdefault">
 										<strong>Viscous peeling of a nanosheet</strong><br>
 										Adyant Agrawal, <u>Simon Gravelle</u>, Catherine Kamal, and Lorenzo Botto<br>
-										Accepted for publication in Soft Matter.</a>  
+										Soft Matter, 18, 3967, 2022</a>  
 									</td>
 								</tr>									
-								
 								<tr>
 									<td>
 										<a href="https://doi.org/10.1021/acs.langmuir.1c01902" target="_blank" class="removelinkdefault">
 										<strong>Adsorption of single and multiple graphene oxide nanoparticles at a water-vapor interface</strong><br>
 										<u>Simon Gravelle</u> and Lorenzo Botto<br>
-										Langmuir, 37, 45, (2021)</a>  
+										Langmuir, 37, 45, 2021</a>  
 									</td>
 								</tr>												
 								<tr>
