updated html pages

--- a/publications.html
+++ b/publications.html
@@ -16,21 +16,19 @@
 		</script>
 	</head>
 	<body class="is-preload">
-			<header id="header">
-				<div class="inner">
-					<h1><strong>Simon Gravelle</strong></h1>
-					<a href="index.html" class="image avatar"><img src="images/gravelle.jpg" alt="" /></a>
-					<a href="https://www.icp.uni-stuttgart.de/" target="_blank">
-					<h5><b>Postdoctoral research assistant</b><br />
-					Institute for computational physics<br />
-					Stuttgart, Germany<h5></a><br />
-					
-					I am a <b>computer physicist</b><br />
-					in soft matter and fluids at interfaces.<br /><br />
-					<a href="resume.html"><b>Full resume</b></a><br />
-					<a href="publications.html"><b>Publication list</b></a><br /><br />
-				</div>
-			</header>
+		<header id="header">
+			<div class="inner">
+				<h1><strong>Simon Gravelle</strong></h1>
+				<a href="index.html" class="image avatar"><img src="images/gravelle.jpg" alt="" /></a>
+				<a href="https://www.icp.uni-stuttgart.de/" target="_blank">
+
+				<h5>Postdoctoral research assistant</h5>
+				<h5>MSCA grant recipient</h5></a>
+				<h5>Advisor for <a href="http://ecopals.de" target="_blank">EcoPals</h5></a><br />
+				<h5>Institute for computational physics<br />
+				Stuttgart, Germany</h5></a>
+			</div>
+		</header>
 
 			<div id="main">
 				<section id="one">
