--- a/publications.html
+++ b/publications.html
@@ -63,10 +63,10 @@
 							<tbody>
 								<tr>
 									<td>
-										<a href="" target="_blank" class="removelinkdefault">
+										<a href="https://aip.scitation.org/doi/10.1063/5.0099646" target="_blank" class="removelinkdefault">
 										<strong>Transport of thin water films: from thermally activated random walks to hydrodynamics</strong><br>
 										<u>Simon Gravelle</u>, Christian Holm, and Alexander Schlaich<br>
-										Submitted to JCP</a>  
+										Accepted for publciation by JCP</a>  
 									</td>
 								</tr>	
 								<tr>
