--- a/publications.html
+++ b/publications.html
@@ -66,7 +66,7 @@
 										<a href="https://aip.scitation.org/doi/10.1063/5.0099646" target="_blank" class="removelinkdefault">
 										<strong>Transport of thin water films: from thermally activated random walks to hydrodynamics</strong><br>
 										<u>Simon Gravelle</u>, Christian Holm, and Alexander Schlaich<br>
-										Accepted for publciation by JCP</a>  
+										The Journal of Chemical Physics, 157 (10), 2022</a>  
 									</td>
 								</tr>	
 								<tr>
