added gromacs tutorials

--- a/index.html
+++ b/index.html
@@ -53,26 +53,36 @@
 					<h2>Open source initiatives</h2>
 
 					<p>
-					<b><a href="https://lammpstutorials.github.io" target="_blank">LAMMPS tutorials -</a></b>
-					courses for absolute LAMMPS beginners: molecular dynamics, 
-					Monte Carlo simulations and free energy methods.</p>
+						<b><a href="https://lammpstutorials.github.io" target="_blank">LAMMPS tutorials -</a></b>
+						courses for LAMMPS beginners: molecular dynamics, 
+						Monte Carlo simulations and free energy methods.
+					</p>
+
+					<p>
+						<b><a href="https://gromacstutorials.github.io" target="_blank">GROMACS tutorials -</a></b>
+						courses for GROMACS beginners: molecular dynamics and free energy methods.
+					</p>
 
 					<p>
 						<b><a href="https://github.com/simongravelle" target="_blank">Github repository -</a></b>
 						molecular dynamics inputs files (LAMMPS & GROMACS), as well Python & Octave scripts 
-						for preparing and analyzing molecular dynamics simulations.</p>
+						for preparing and analyzing molecular dynamics simulations.
+					</p>
 
 						<b><a href="https://darus.uni-stuttgart.de/dataverse/sfb1313_c01_thin-film" target="_blank">DaRUS repository -</a></b>
-						molecular dynamics inputs files and large trajectory files.</p>
+						molecular dynamics inputs files and large trajectory files.
+					</p>
 
 
 						<b><a href="https://www.maicos-analysis.org/" target="_blank">MAICoS analysis -</a></b>
 						Object-oriented Python toolkit for analysing the structure and dynamics of interfacial 
-						and confined fluids from molecular simulations.</p>
+						and confined fluids from molecular simulations.
+					</p>
 
 
 						<b><a href="https://nmrformd.readthedocs.io/en/latest/" target="_blank">NMRforMD -</a></b>
-						Python script to calculate NMR relaxation times from molecular dynamics trajectory files.</p>
+						Python script to calculate NMR relaxation times from molecular dynamics trajectory files.
+					</p>
 				</section>
 				<section id="two">
 					<h2>Publications</h2>
