--- a/publications.html
+++ b/publications.html
@@ -61,6 +61,15 @@
 
 						<table>
 							<tbody>
+							
+								<tr>
+									<td>
+										<a href="https://chemrxiv.org/engage/chemrxiv/article-details/63a45812e8047a86d2f217c7" target="_blank" class="removelinkdefault">
+										<strong>Reconstruction of NMR Relaxation Rates from Coarse-Grained Polymer Simulations</strong><br>
+										<u>Simon Gravelle</u>, David Beyer, Mariano Brito, and Alexander Schlaich, and Christian Holm<br>
+										Submitted</a>  
+									</td>
+								</tr>					
 								<tr>
 									<td>
 										<a href="https://aip.scitation.org/doi/10.1063/5.0099646" target="_blank" class="removelinkdefault">
