upldated publication list

--- a/publications.html
+++ b/publications.html
@@ -61,12 +61,19 @@
 
 						<table>
 							<tbody>
-							
+								<tr>
+									<td>
+										<a href="https://chemrxiv.org/engage/chemrxiv/article-details/63aedbf204902ad473148fa4" target="_blank" class="removelinkdefault">
+										<strong>NMR Investigation of Water in Salt Crusts: Insights from Experiments and Molecular Simulations</strong><br>
+										<u>Simon Gravelle</u>, Sabina Haber-Pohlmeier, Carlos Mattea, Siegfried Stapf, Christian Holm, and Alexander Schlaich<br>
+										Submitted</a>  
+									</td>
+								</tr>								
 								<tr>
 									<td>
 										<a href="https://chemrxiv.org/engage/chemrxiv/article-details/63a45812e8047a86d2f217c7" target="_blank" class="removelinkdefault">
 										<strong>Reconstruction of NMR Relaxation Rates from Coarse-Grained Polymer Simulations</strong><br>
-										<u>Simon Gravelle</u>, David Beyer, Mariano Brito, and Alexander Schlaich, and Christian Holm<br>
+										<u>Simon Gravelle</u>, David Beyer, Mariano Brito, Alexander Schlaich, and Christian Holm<br>
 										Submitted</a>  
 									</td>
 								</tr>					
