--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ simulations</li><li><a href=https://nmrformd.readthedocs.io/en/latest/ target=_b
 <a href=./publication/2023-nmr-investigation-of-water.html>NMR Investigation of Water in Salt Crusts: Insights from Experiments and Molecular Simulations</a>.
 Langmuir, XX, XX.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1021/acs.langmuir.3c00036 target=_blank rel=noopener><i class="fas fa-scroll mr-1"></i>Link</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/simongravelle/gravelle2023langmuir target=_blank rel=noopener><i class="ai ai-open-access mr-1"></i>Repository</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.18419/darus-3179 target=_blank rel=noopener><i class="ai ai-open-data mr-1"></i>Open data</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.18419/darus-3180 target=_blank rel=noopener><i class="ai ai-open-data mr-1"></i>Open data</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.18419/darus-3179 target=_blank rel=noopener><i class="ai ai-open-data mr-1"></i>Open data (bulk system)</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.18419/darus-3180 target=_blank rel=noopener><i class="ai ai-open-data mr-1"></i>Open data (slit pore)</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>Ángel Díaz Carral</span>, <span>Xiang Xu</span>, <span><strong>Simon Gravelle</strong></span>, <span>Azade YazdanYar</span>, <span>Siegfried Schmauder</span>, <span>Maria Fyta</span></span>
 (2023).
 <a href=./publication/2023-stability-of-binary.html>Stability of Binary Precipitates in Cu-Ni-Si-Cr Alloys Investigated Through Active Learning</a>.
