deploy: e81cc3bd34fed393aec5cd4170f378b75761f20a

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Langmuir, 39, 22, 7548–7556.<p><a class="btn btn-outline-primary btn-page-head
 <span class="article-metadata li-cite-author"><span>Ángel Díaz Carral</span>, <span>Xiang Xu</span>, <span><strong>Simon Gravelle</strong></span>, <span>Azade YazdanYar</span>, <span>Siegfried Schmauder</span>, <span>Maria Fyta</span></span>
 (2023).
 <a href=./publication/2023-stability-of-binary.html>Stability of Binary Precipitates in Cu-Ni-Si-Cr Alloys Investigated Through Active Learning</a>.
-<em>Preprint</em>.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4365590" target=_blank rel=noopener><i class="fas fa-scroll mr-1"></i>Preprint</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+Accepted for publication by Materials Chemistry and Physics.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1016/j.matchemphys.2023.128053 target=_blank rel=noopener><i class="fas fa-scroll mr-1"></i>Preprint</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span><strong>Simon Gravelle</strong></span>, <span>Christian Holm</span>, <span>Alexander Schlaich</span></span>
 (2022).
 <a href=./publication/2022-transport-of-thin.html>Transport of thin water films: from thermally activated random walks to hydrodynamics</a>.
