deploy: ef08d4accf3fd65ec3ce3d637e50f3abf72d00e7

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@ J. Phys. Chem. B 2023, 127, 25, 5601–5608.<p><a class="btn btn-outline-primary
 <span class="article-metadata li-cite-author"><span>Ángel Díaz Carral</span>, <span>Xiang Xu</span>, <span><strong>Simon Gravelle</strong></span>, <span>Azade Yazdan Yar</span>, <span>Siegfried Schmauder</span>, <span>Maria Fyta</span></span>
 (2023).
 <a href=./publication/2023-stability-of-binary.html>Stability of Binary Precipitates in Cu-Ni-Si-Cr Alloys Investigated Through Active Learning</a>.
-Accepted for publication by Materials Chemistry and Physics.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1016/j.matchemphys.2023.128053 target=_blank rel=noopener><i class="fas fa-scroll mr-1"></i>Preproof</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+Materials Chemistry and Physics 306 (2023) 128053.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1016/j.matchemphys.2023.128053 target=_blank rel=noopener><i class="fas fa-scroll mr-1"></i>Link</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/simongravelle/publication-data target=_blank rel=noopener><i class="ai ai-open-data mr-1"></i>Open-data</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span><strong>Simon Gravelle</strong></span>, <span>Sabina Haber-Pohlmeier</span>, <span>Carlos Mattea</span>, <span>Siegfried Stapf</span>, <span>Christian Holm</span>, <span>Alexander Schlaich</span></span>
 (2023).
 <a href=./publication/2023-nmr-investigation-of-water.html>NMR Investigation of Water in Salt Crusts: Insights from Experiments and Molecular Simulations</a>.
