deploy: f9183dcdbf23dd5b50862c5e655f826e84d67e57

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 molecular simulations to study fluids at interfaces and soft matter systems.</p><p><strong>Open Source and Outreach Activities</strong></p><p>I share all the code developed as part of my research as open source. You can
 find it in my <a href=https://github.com/simongravelle/ target=_blank rel=noopener>GitHub</a> repository.
 Additionally, see the following resources:</p><ul><li><a href=https://maicos-devel.gitlab.io/maicos/index.html target=_blank rel=noopener>MAICoS</a>, a Python toolkit
-for analyzing confined molecular simulations</li><li><a href=https://github.com/lammpstutorials target=_blank rel=noopener>LAMMPS Tutorials</a>, tutorials for
+for analyzing confined molecular simulations</li><li><a href=https://lammpstutorials.github.io target=_blank rel=noopener>LAMMPS Tutorials</a>, tutorials for
 beginners using LAMMPS</li><li><a href=https://gromacstutorials.github.io target=_blank rel=noopener>GROMACS Tutorials</a>, tutorials for
 beginners using GROMACS</li><li><a href=https://mdcourse.github.io target=_blank rel=noopener>MDCourse</a>, a Python course
 on molecular simulations</li><li><a href=https://www.youtube.com/@SimonGravelle target=_blank rel=noopener>Gallery of Animations</a> and
