deploy: fe7773e66fa84f70a962ff82892bffbd80a4038b

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@ for CO₂ capture.</p></div></a><div class="stream-meta article-metadata"><div c
 arXiv 2025.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2503.14020 target=_blank rel=noopener><i class="fas fa-scroll mr-1"></i>Link</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span><strong>Simon Gravelle</strong></span>, <span>Benoit Coasne</span>
 </span>(2025).
-<a href=./publications/2025_gravelle_hal_adsorption_selectivity_of.html>Adsorption Selectivity of Water-Ethanol Mixtures on Organosilica Surfaces: Role of Hydrophilicity</a>.
-HAL 2025.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://cnrs.hal.science/hal-04917234/ target=_blank rel=noopener><i class="fas fa-scroll mr-1"></i>Link</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<a href=./publications/2025_5_gravelle_open_research_europe_adsorption_selectivity_of.html>Adsorption selectivity of water-ethanol mixtures on organosilica surfaces: Role of hydrophilicity</a>.
+Open Research Europe 2025 5.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://open-research-europe.ec.europa.eu/articles/5-158 target=_blank rel=noopener><i class="fas fa-scroll mr-1"></i>Link</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span><strong>Simon Gravelle</strong></span>, <span>Catherine Kamal</span>, <span>Lorenzo Botto</span>
 </span>(2025).
 <a href=./publications/2025_gravelle_acta_mechanica_effect_of_thermal.html>Effect of thermal fluctuations on the average shape of a graphene nanosheet suspended in a shear flow</a>.
 Acta Mechanica 2025.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://link.springer.com/article/10.1007/s00707-024-04190-9 target=_blank rel=noopener><i class="fas fa-scroll mr-1"></i>Link</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>Aysha Siddika Asha</span>, <span>Mubeen Jamal</span>, <span><strong>Simon Gravelle</strong></span>, <span>Maricris L Mayes</span>, <span>Caiwei Shen</span>
 </span>(2025).
-<a href=./publications/2025_asha_the_journal_of_physical_chemistry_b_exploring_the_impact.html>Exploring the Impact of Minor Water Content on Polymer Electrolytes with Molecular Dynamics</a>.
-The Journal of Physical Chemistry B 2025.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.4c04984 target=_blank rel=noopener><i class="fas fa-scroll mr-1"></i>Link</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<a href=./publications/2025_129_3_asha_the_journal_of_physical_chemistry_b_exploring_the_impact.html>Exploring the Impact of Minor Water Content on Polymer Electrolytes with Molecular Dynamics</a>.
+The Journal of Physical Chemistry B 2025 129 (3).<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.4c04984 target=_blank rel=noopener><i class="fas fa-scroll mr-1"></i>Link</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>Zouhir Benrahla</span>, <span>Tristan Saide</span>, <span>Louis Burnaz</span>, <span>Emilie Verneuil</span>, <span><strong>Simon Gravelle</strong></span>, <span>Jean Comtet</span>
 </span>(2025).
 <a href=./publications/2025_benrahla_arxiv_giant_mobility_of.html>Giant mobility of surface-trapped ionic charges following liquid tribocharging</a>.
